[gd_scene load_steps=5 format=3 uid="uid://d300vj13mwluh"]

[ext_resource type="Script" path="res://scenes/ui/ps_smash_cue_ui.gd" id="1_ljvet"]
[ext_resource type="Texture2D" uid="uid://cosg6a0yrttwl" path="res://assets/ui/mark.png" id="2_eit1n"]
[ext_resource type="Texture2D" uid="uid://c3364y0gvc25n" path="res://assets/ui/smash_alert.png" id="3_jogpl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wvco"]
bg_color = Color(0.6, 0.211765, 0.6, 0.666667)

[node name="PsSmashCueUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljvet")

[node name="TextureMark" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)
texture = ExtResource("2_eit1n")
expand_mode = 1
stretch_mode = 5

[node name="InputCue" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="InputCue"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2wvco")

[node name="InputCueContainer" type="VBoxContainer" parent="InputCue"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputCueLabel" type="Label" parent="InputCue/InputCueContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 10
text = "E"

[node name="InputCueIconTexture" type="TextureRect" parent="InputCue/InputCueContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_jogpl")
expand_mode = 1
stretch_mode = 5
